--- a/app/src/main/res/layout/fragment_wallet_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_details.xml
@@ -98,48 +98,22 @@
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@id/rv_pending_transaction" />
 
-                <include
-                    android:id="@+id/l_warning"
-                    layout="@layout/layout_wallet_details_warning"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_warning_messages"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/l_wallet_details" />
-
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/card_pending_transaction_warning"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="8dp"
-                    android:visibility="gone"
-                    app:cardBackgroundColor="@color/darkGray1"
-                    app:cardCornerRadius="8dp"
-                    app:layout_constraintTop_toBottomOf="@+id/l_wallet_details">
-
-                    <TextView
-                        android:id="@+id/tv_pending_transaction_warning"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:text="@string/wallet_pending_transaction_warning"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp" />
-                </com.google.android.material.card.MaterialCardView>
 
                 <androidx.constraintlayout.widget.Barrier
                     android:id="@+id/barrier"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:barrierDirection="bottom"
-                    app:constraint_referenced_ids="l_wallet_details,card_pending_transaction_warning" />
+                    app:constraint_referenced_ids="l_wallet_details" />
 
                 <androidx.constraintlayout.widget.Barrier
                     android:id="@+id/barrier_left_button"
@@ -168,7 +142,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/btn_sell"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/l_warning"
+                    app:layout_constraintTop_toBottomOf="@+id/rv_warning_messages"
                     app:layout_constraintVertical_bias="1" />
 
                 <com.google.android.material.button.MaterialButton
@@ -185,7 +159,7 @@
                     app:layout_constraintEnd_toStartOf="@id/btn_confirm"
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toEndOf="@id/btn_trade"
-                    app:layout_constraintTop_toBottomOf="@+id/l_warning"
+                    app:layout_constraintTop_toBottomOf="@+id/rv_warning_messages"
                     app:layout_constraintVertical_bias="1" />
 
                 <com.google.android.material.button.MaterialButton
@@ -201,7 +175,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/btn_sell"
-                    app:layout_constraintTop_toBottomOf="@+id/l_warning"
+                    app:layout_constraintTop_toBottomOf="@+id/rv_warning_messages"
                     app:layout_constraintVertical_bias="1" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
