--- a/app/src/main/res/layout/item_currency_wallet.xml
+++ b/app/src/main/res/layout/item_currency_wallet.xml
@@ -1,205 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/card_wallet"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
-        android:background="@android:color/white"
-        android:elevation="3dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/card_wallet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="76dp">
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            android:background="@android:color/white"
+            android:elevation="3dp">
 
-            <androidx.constraintlayout.utils.widget.ImageFilterView
-                android:id="@+id/iv_currency"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:src="@drawable/shape_circle" />
-
-            <TextView
-                android:id="@+id/tv_token_letter"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="2dp"
-                android:textColor="@android:color/white"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/iv_currency"
-                app:layout_constraintEnd_toEndOf="@id/iv_currency"
-                app:layout_constraintStart_toStartOf="@id/iv_currency"
-                app:layout_constraintTop_toTopOf="@id/iv_currency"
-                tools:text="J" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline"
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.5" />
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp">
+
+            <androidx.constraintlayout.utils.widget.ImageFilterView
+                    android:id="@+id/iv_currency"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:src="@drawable/shape_circle" />
 
             <TextView
-                android:id="@+id/tv_currency"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:paddingStart="16dp"
-                android:paddingEnd="2dp"
-                android:textColor="@color/darkGray6"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/guideline"
-                app:layout_constraintEnd_toStartOf="@+id/tv_amount"
-                app:layout_constraintStart_toEndOf="@id/iv_currency"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Binance Smart Chain Optimal" />
+                    android:id="@+id/tv_token_letter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="2dp"
+                    android:textColor="@android:color/white"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/iv_currency"
+                    app:layout_constraintEnd_toEndOf="@id/iv_currency"
+                    app:layout_constraintStart_toStartOf="@id/iv_currency"
+                    app:layout_constraintTop_toTopOf="@id/iv_currency"
+                    tools:text="J" />
 
             <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintGuide_percent="0.45"
-                app:layout_constraintTop_toTopOf="parent" />
+                    android:id="@+id/guideline"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintGuide_percent="0.5" />
 
             <TextView
-                android:id="@+id/tv_amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="4dp"
-                android:ellipsize="end"
-                android:gravity="end"
-                android:maxEms="12"
-                android:maxLength="12"
-                android:maxLines="1"
-                android:textColor="@color/darkGray6"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:visibility="visible"
-                app:layout_constraintEnd_toStartOf="@+id/tv_currency_symbol"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="@+id/guideline2"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="1234567890.1234567890" />
+                    android:id="@+id/tv_currency"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textColor="@color/darkGray6"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    app:lineHeight="24dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/guideline"
+                    app:layout_constraintStart_toEndOf="@id/iv_currency"
+                    app:layout_constraintEnd_toStartOf="@+id/tv_amount"
+                    tools:text="Binance Smart Chain Optimal" />
+
+            <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintGuide_percent="0.5"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_exchange_rate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:textColor="@color/darkGray2"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/iv_currency"
-                app:layout_constraintTop_toTopOf="@id/guideline"
-                tools:text="USD 3 588" />
+                    android:id="@+id/tv_amount_fiat"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:maxEms="12"
+                    android:maxLength="12"
+                    android:maxLines="1"
+                    android:textColor="@color/darkGray6"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textAlignment="viewEnd"
+                    app:lineHeight="24dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/guideline"
+                    app:layout_constraintStart_toEndOf="@+id/guideline2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="12300.43 $" />
 
             <TextView
-                android:id="@+id/tv_custom_currency"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:paddingStart="4dp"
-                android:paddingEnd="4dp"
-                android:paddingTop="3dp"
-                android:paddingBottom="3dp"
-                android:textColor="@color/darkGray2"
-                android:textSize="14sp"
-                android:background="@drawable/shape_rectangle_rounded_4"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/iv_currency"
-                app:layout_constraintTop_toTopOf="@id/guideline"
-                android:text="@string/common_custom" />
+                    android:id="@+id/tv_amount"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:maxEms="12"
+                    android:maxLength="12"
+                    android:maxLines="1"
+                    android:textColor="@color/darkGray2"
+                    android:textSize="12sp"
+                    android:textAlignment="viewEnd"
+                    app:lineHeight="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/guideline"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/guideline2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="2.002134 BTC" />
 
             <TextView
-                android:id="@+id/tv_status_error_message"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:textColor="@color/warning"
-                android:textSize="14sp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/tv_amount_fiat"
-                app:layout_constraintStart_toEndOf="@id/iv_currency"
-                app:layout_constraintTop_toTopOf="@id/guideline"
-                tools:text="@string/lorem_ipsum" />
+                    android:id="@+id/tv_status"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:maxLines="1"
+                    android:ellipsize="end"
+                    android:textColor="@color/darkGray2"
+                    android:textSize="12sp"
+                    android:textAlignment="viewEnd"
+                    app:lineHeight="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/guideline"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/guideline2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:text="Unreachable..." />
 
             <TextView
-                android:id="@+id/tv_status_loading"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:drawablePadding="5dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:text="@string/wallet_balance_loading"
-                android:textColor="@color/darkGray6"
-                android:textSize="13sp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                    android:id="@+id/tv_exchange_rate"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:maxLines="1"
+                    android:textColor="@color/darkGray2"
+                    android:textSize="12sp"
+                    app:lineHeight="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/guideline"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/iv_currency"
+                    app:layout_constraintEnd_toStartOf="@id/guideline2"
+                    tools:text="46 908 $" />
 
             <TextView
-                android:id="@+id/tv_currency_symbol"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:gravity="end"
-                android:maxLines="1"
-                android:textColor="@color/darkGray6"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_weight="1"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="BTC" />
-
-            <TextView
-                android:id="@+id/tv_amount_fiat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:paddingEnd="16dp"
-                android:textColor="@color/darkGray2"
-                android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/guideline"
-                tools:text="0.43 USD" />
+                    android:id="@+id/tv_custom_currency"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:textColor="@color/darkGray2"
+                    android:textSize="14sp"
+                    android:text="@string/common_custom"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@id/guideline"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/iv_currency"
+                    app:layout_constraintEnd_toStartOf="@id/guideline2" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
-
 </FrameLayout>
-
