--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -18,12 +18,13 @@
         app:liftOnScroll="true">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/wallet"
-            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
-            app:title="@string/wallet_title" />
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:menu="@menu/wallet"
+                app:navigationIcon="@drawable/ic_scan_card_24"
+                app:navigationIconTint="@color/iconGray"
+                app:title="@string/wallet_title" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -41,19 +42,20 @@
             android:overScrollMode="never">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_wallet"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/iv_card"
+                    android:id="@+id/cl_wallet"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="12dp"
+                    android:paddingBottom="74dp">
+
+                <ImageView
+                        android:id="@+id/iv_card"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="12dp"
                     android:adjustViewBounds="true"
                     android:elevation="3dp"
                     android:maxHeight="215dp"
@@ -149,26 +151,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/rv_pending_transaction" />
 
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/btn_add_token"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginBottom="32dp"
-                    android:background="@android:color/white"
-                    android:elevation="3dp"
-                    app:layout_constraintTop_toBottomOf="@id/rv_multiwallet">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:text="@string/wallet_button_add_tokens"
-                        android:textSize="14sp" />
-
-                </com.google.android.material.card.MaterialCardView>
-
                 <include
                     android:id="@+id/l_buttons_long"
                     layout="@layout/layout_wallet_long_buttons"
@@ -186,32 +168,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
-                    android:layout_marginTop="30dp"
-                    app:layout_constraintTop_toBottomOf="@id/l_address"
-                    app:layout_constraintVertical_bias="1"
-                    app:layout_constraintBottom_toBottomOf="parent" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_scan_multiwallet"
-                    style="@style/TapBlackButton"
-                    android:layout_width="wrap_content"
-                    android:minWidth="100dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginBottom="33dp"
-                    android:text="@string/wallet_button_scan"
-                    app:icon="@drawable/ic_scan"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/btn_add_token"
-                    app:layout_constraintVertical_bias="1" />
-
+                        android:layout_marginTop="30dp"
+                        app:layout_constraintTop_toBottomOf="@id/l_address"
+                        app:layout_constraintVertical_bias="1"
+                        app:layout_constraintBottom_toBottomOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_add_token"
+            style="@style/BaseTapButton"
+            android:layout_width="match_parent"
+            android:layout_height="42dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:textSize="16sp"
+            android:text="@string/main_manage_tokens"
+            android:elevation="4dp"
+            app:cornerRadius="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
