--- a/app/src/main/res/menu/wallet.xml
+++ b/app/src/main/res/menu/wallet.xml
@@ -2,8 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/details_menu"
-        android:title="@string/details_title"
-        android:icon="@drawable/ic_settings"
-        app:showAsAction="ifRoom" />
+            android:id="@+id/details_menu"
+            android:title="@string/details_title"
+            android:icon="@drawable/ic_more_vertical_24"
+            app:iconTint="@color/iconGray"
+            app:showAsAction="ifRoom" />
 </menu>
