--- a/app/src/main/res/layout/item_currency_wallet.xml
+++ b/app/src/main/res/layout/item_currency_wallet.xml
@@ -21,7 +21,8 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp">
+                android:layout_marginEnd="16dp"
+                android:animateLayoutChanges="true">
 
             <androidx.constraintlayout.utils.widget.ImageFilterView
                     android:id="@+id/iv_currency"
@@ -46,112 +47,25 @@
                     app:layout_constraintTop_toTopOf="@id/iv_currency"
                     tools:text="J" />
 
-            <androidx.constraintlayout.widget.Guideline
-                    android:id="@+id/guideline_horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintGuide_percent="0.5" />
-
-            <TextView
-                    android:id="@+id/tv_currency"
+            <include
+                    layout="@layout/item_currency_wallet_content"
+                    android:id="@+id/l_content"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:textColor="@color/darkGray6"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:lineHeight="24dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
-                    app:layout_constraintStart_toEndOf="@id/iv_currency"
-                    app:layout_constraintEnd_toStartOf="@+id/tv_amount_fiat"
-                    tools:text="Binance Smart Chain Optimal" />
-
-
-            <TextView
-                    android:id="@+id/tv_amount_fiat"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:textColor="@color/darkGray6"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textAlignment="viewEnd"
-                    app:lineHeight="24dp"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/guideline_horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="1230.43 $" />
-
-            <TextView
-                    android:id="@+id/tv_amount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:textColor="@color/darkGray2"
-                    android:textSize="12sp"
-                    android:textAlignment="viewEnd"
-                    app:lineHeight="20dp"
-                    app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="2.002134 BTC" />
-
-            <TextView
-                    android:id="@+id/tv_status"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
                     android:visibility="gone"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:textColor="@color/darkGray2"
-                    android:textSize="12sp"
-                    android:textAlignment="viewEnd"
-                    app:lineHeight="20dp"
-                    app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/barrier_rate_custom"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    tools:text="Unreachable..." />
-
-            <TextView
-                    android:id="@+id/tv_exchange_rate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:maxLines="1"
-                    android:textColor="@color/darkGray2"
-                    android:textSize="12sp"
-                    app:lineHeight="20dp"
-                    app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@id/iv_currency"
-                    tools:text="46 908 $" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    tools:visibility="visible" />
 
-            <TextView
-                    android:id="@+id/tv_custom_currency"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+            <include
+                    layout="@layout/item_currency_wallet_shimmer"
+                    android:id="@+id/l_shimmer"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
                     android:layout_marginStart="8dp"
-                    android:textColor="@color/darkGray2"
-                    android:textSize="14sp"
-                    android:text="@string/common_custom"
-                    android:visibility="gone"
-                    app:layout_constraintTop_toBottomOf="@id/guideline_horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/iv_currency" />
-
-            <androidx.constraintlayout.widget.Barrier
-                    android:id="@+id/barrier_rate_custom"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:constraint_referenced_ids="tv_exchange_rate,tv_custom_currency"
-                    app:barrierDirection="end" />
+                    app:layout_constraintStart_toEndOf="@id/iv_currency"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.card.MaterialCardView>
