--- a/app/src/main/res/values/strings_final.xml
+++ b/app/src/main/res/values/strings_final.xml
@@ -46,4 +46,8 @@
 
     <string name="common_custom">Custom</string>
 
+    <string name="main_page_balance">Total balance</string>
+    <string name="main_processing_full_amount">Some networks are unreachable</string>
+    <string name="main_manage_tokens">Manage tokens</string>
+    <string name="token_item_no_rate">No rate</string>
 </resources>
